--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/ts-plugin": "^1.10.4",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.12",
     "tailwindcss": "^4.1.4"
