--- a/package.json
+++ b/package.json
@@ -12,26 +12,29 @@
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.1",
+    "@astrojs/sitemap": "^3.4.0",
+    "@astrojs/solid-js": "^5.1.0",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@tailwindcss/vite": "^4.1.4",
-    "astro": "^5.7.12",
-    "tailwindcss": "^4.1.4"
+    "@tailwindcss/vite": "^4.1.8",
+    "astro": "^5.8.1",
+    "solid-js": "^1.9.7",
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.46"
   },
   "devDependencies": {
     "@eslint/css": "^0.7.0",
-    "@eslint/js": "^9.25.0",
+    "@eslint/js": "^9.28.0",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
-    "@typescript-eslint/parser": "^8.30.1",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.2",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "globals": "^16.0.0",
+    "globals": "^16.2.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-toml": "^2.0.4",
-    "typescript-eslint": "^8.30.1"
+    "prettier-plugin-toml": "^2.0.5",
+    "typescript-eslint": "^8.33.0"
   }
 }
