--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       {
         "name": "@astrojs/ts-plugin"
       }
-    ]
+    ],
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
   }
 }
